Fix the bug that the cart drawer is not shown when the page is too large

--- a/css/homepage-cart-drawer.css
+++ b/css/homepage-cart-drawer.css
@@ -1,4 +1,4 @@
-@media (max-width: 1368px) {
+@media (min-width: 1368px) {
   /* Cart Overlay */
   .cart-overlay {
     position: fixed;
